# thnss_task

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/technesis/: config.py  constants.py  handlers.py  keyboards.py  main.py  parsers.py  tasks.py  utils.py
tests/technesis/: test_technesis.py
tests/technesis/data/: example.html  test.db
